<resources>
    <string name="app_name">Football Counter</string>
    <string name="team_a_label">Team A</string>
    <string name="team_b_label">Team B</string>
    <string name="reset_label">RESET</string>
    <string name="try_label">TRY</string>
    <string name="conversion_label">CONVERSION</string>
    <string name="penalty_label">PENALTY</string>
    <string name="drop_goal_label">DROP-GOAL</string>
    <string name="initial_score">0</string>
</resources>
